--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.gitignore.io/api/c,c++,visualstudio
 # Edit at https://www.gitignore.io/?templates=c,c++,visualstudio
 
+# DAVE
+*.suo
+*.db
+
 ### C ###
 # Prerequisites
 *.d
